<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimaryDark" android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.MainActivity">
    <android.support.v7.widget.CardView
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_centerInParent="true"
            app:cardElevation="4dp"


            app:cardCornerRadius="4dp"

            android:layout_height="wrap_content"
            android:id="@+id/cardView"
    >
        <RelativeLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView android:layout_width="match_parent"
                       android:layout_height="wrap_content"

                       android:src="@mipmap/ic_launcher"
                       android:id="@+id/iv_logo"
            />

            <TextView
                    android:layout_margin="4dp"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:text="@string/SuperImageResolution"
                    android:id="@+id/tv_welcome"
                    android:gravity="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:layout_below="@id/iv_logo"/>

            <LinearLayout
                    android:weightSum="2"
                    android:gravity="center"
                    android:layout_below="@id/tv_welcome"
                    android:orientation="vertical"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <Button android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="0dp"
                        android:id="@+id/btn_main_login"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:text="@string/login"
                />

                <Button android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/btn_main_signup"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_height="0dp"
                        android:text="@string/sign_up"
                />


            </LinearLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>