<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:id="@+id/rl_LoginActivity"
        android:background="@color/colorPrimaryDark"
        android:layout_height="match_parent"
        tools:context=".Activity.LoginActivity">


    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:id="@+id/cv"
                                        android:layout_margin="8dp"
                                        android:layout_centerInParent="true"
                                        android:layout_height="wrap_content">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:text="@string/login"
                      android:padding="16dp"
                      android:textStyle="bold"
                      android:textColor="@color/black"

                      android:gravity="center"
                      android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

            />
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_login_mail"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_user_email"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:id="@+id/et_login_password"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_password"/>

            </android.support.design.widget.TextInputLayout>


            <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:id="@+id/btn_login_submit"
                    android:layout_margin="8dp"
                    android:text="@string/login"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
            />

        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>