<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"

        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.DashBoardActivity">

    <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent" android:layout_height="wrap_content">

        <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:id="@+id/pb_loading"
                     android:visibility="invisible"
                     android:layout_below="@id/cv_new_item"
        />

        <android.support.v7.widget.CardView
                app:cardCornerRadius="4dp"
                android:id="@+id/cv_new_item"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="match_parent" android:layout_height="wrap_content">

                <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:text="@string/enhance_your_image_in_a_click"
                          android:layout_gravity="center"
                          android:gravity="center"
                          android:textColor="@color/colorPrimaryDark"
                          android:textStyle="bold"
                          android:layout_margin="10dp"
                          android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                />
                <Button android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:id="@+id/btn_choose_pic"
                        android:text="@string/choose_image"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                />
                <Button
                        android:layout_gravity="center"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:id="@+id/btn_take_pic"
                        android:visibility="gone"
                        android:text="@string/captureimage"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                />


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_below="@id/cv_new_item"
                  android:id="@+id/tv_HistoryofItems"
                  android:text="Your Images"


                  android:layout_gravity="center"
                  android:gravity="center"
                  android:textColor="@color/white"
                  android:textStyle="bold"
                  android:layout_margin="10dp"
                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"

        />

        <android.support.v7.widget.RecyclerView android:layout_width="match_parent"

                                                android:layout_below="@id/tv_HistoryofItems"
                                                android:layout_margin="4dp"

                                                android:id="@+id/rv_history"
                                                android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>

</ScrollView>